welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:49: error: reassignment to val
  if(x= 0%2){rep=true}
      ^